# ppct

./: .gitignore
jiff/: Dockerfile  alice.js  bob.js  mpc.js  server.js
libsnark/: CMakeLists.txt  Dockerfile  bank-prove.cpp  client-verify.cpp  common.hpp  test.cpp  trusted-setup.cpp
obliv-c/: Dockerfile  Makefile  million.c  million.h  million.oc
obliv-c/innerProd/: Makefile  innerProd.c  innerProd.h  innerProd.oc  input1.txt  input2.txt
paillier/: Dockerfile  HE-Test.py
rsa/: Dockerfile  HE-Test.py
rsa-psi/: Dockerfile  client.py  print_time.py  server.py
seal/: CMakeLists.txt  Dockerfile  client-decrypt.cpp  client-setup.cpp  demo.cpp  server-compute.cpp
sgx/SecureCrypto/: SecureCrypto.sln
sgx/SecureCrypto/CryptoApp/: CryptoApp.cpp  CryptoApp.vcxproj  CryptoApp.vcxproj.filters  CryptoEnclave_u.c  CryptoEnclave_u.h  OptHelper.cpp  OptHelper.h
sgx/SecureCrypto/CryptoEnclave/: CryptoEnclave.cpp  CryptoEnclave.edl  CryptoEnclave.vcxproj  CryptoEnclave.vcxproj.filters  CryptoEnclave_private.pem  CryptoEnclave_t.c  CryptoEnclave_t.h
smartnoise/: Dockerfile  DockerfileIncludedSDK  HistogramGeometricDemo.py  HistogramLaplaceDemo.py  PropertiesDemo.py  SNJupyterDockerfile  SQLDemo.py
smartnoise/data/: PUMS.csv  PUMS.yaml
